# taddle

./: README.md  pyproject.toml
scripts/: build_app.sh  taddle_dashboard.command
taddle/: __init__.py  alerts.py  config.py  core.py  events.py  logger.py  registry.py  utils.py
taddle/dashboard/: __main__.py  app.py  event_table.py  log_reader.py  overview_tab.py  sidebar.py  styles.py  system_tab.py
taddle/monitors/: base.py  filesystem.py
tests/: conftest.py  test_alerts.py  test_config.py  test_core.py  test_events.py  test_filesystem.py  test_integration.py  test_log_reader.py  test_logger.py  test_registry.py  test_utils.py
