[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "taddle"
version = "0.1.0"
description = "Passive security monitoring library"
requires-python = ">=3.10"
dependencies = [
    "watchdog>=3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[project.scripts]
taddle-dashboard = "taddle.dashboard.__main__:main"

[project.gui-scripts]
taddle-dashboard-gui = "taddle.dashboard.__main__:main"

[tool.setuptools.packages.find]
include = ["taddle*"]
